SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>