SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>