SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/fields/Org_Password_Changed__c.field-meta.xml
<CustomField>
    <fullName>Org_Password_Changed__c</fullName>
    <label>Org Password Changed</label>
    <length>15</length>
    <type>Text</type>
</CustomField>