SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/fields/Org_Username__c.field-meta.xml
<CustomField>
    <fullName>Org_Username__c</fullName>
    <label>Org Username</label>
    <type>Email</type>
</CustomField>