SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/fields/OrgUsername__c.field-meta.xml
<CustomField>
    <fullName>OrgUsername__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Org Username</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>