SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/recordTypes/Attendee.recordType-meta.xml
<RecordType>
    <fullName>Attendee</fullName>
    <active>true</active>
    <description>Delivery attendee</description>
    <label>Attendee</label>
</RecordType>