SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/recordTypes/Instructor.recordType-meta.xml
<RecordType>
    <fullName>Instructor</fullName>
    <active>true</active>
    <description>Master records for instructors</description>
    <label>Instructor</label>
</RecordType>