SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/validationRules/Attendees_must_have_delivery.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendees_must_have_delivery</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = &apos;Attendee&apos; &amp;&amp; Delivery__c = null</errorConditionFormula>
    <errorMessage>Attendees require a delivery</errorMessage>
</ValidationRule>