SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/validationRules/Instructors_cannot_have_delivery.validationRule-meta.xml
<ValidationRule>
    <fullName>Instructors_cannot_have_delivery</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = &apos;Instructor&apos; &amp;&amp; Delivery__c != null</errorConditionFormula>
    <errorMessage>Instructors can&apos;t have delivery</errorMessage>
</ValidationRule>