SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Delivery__c</columns>
    <columns>IsInstructor__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Org_Username__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>