SALESFORCE/force-apps/deploy/main/default/objects/Attendee__c/listViews/Instructors.listView-meta.xml
<ListView>
    <fullName>Instructors</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Delivery__c</columns>
    <columns>IsInstructor__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Attendee__c.Instructor</value>
    </filters>
    <label>Instructors</label>
</ListView>